# shortcut

./: COPYING  Cargo.toml  Containerfile  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: release.yml  verify.yml
scripts/: check.sh  install-deps.sh  install.sh  package.sh  podman-build.sh  podman-image.sh
shortcut-core/: Cargo.toml  build.rs
shortcut-core/proto/: ssh.proto  wifi.proto
shortcut-core/src/: lib.rs
shortcut-daemon/: Cargo.toml
shortcut-daemon/src/: main.rs
shortcut-gui/: Cargo.toml
shortcut-gui/resources/art/: Capsule.xcf  Hero.xcf  Logo.xcf
shortcut-gui/src/: main.rs  style.rs  widgets.rs
shortcut-gui/src/audio/: mod.rs
shortcut-gui/src/ssh/: mod.rs
shortcut-gui/src/wifi/: mod.rs
