[package]
name = "shortcut-daemon"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shortcut-core = { path = "../shortcut-core" }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"]}
